--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -50,4 +50,39 @@
       </form>
     </div>
   </div>
+  
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>Profile Information</h1>
+    </div>
+    <div class="col-sm-12">
+      <form class="form" name="form" ng-submit="vm.changeProfile(form)" novalidate>
+
+        <div class="form-group">
+          <label>City</label>
+
+          <input type="text" name="city" class="form-control" ng-model="vm.user.city"
+                 mongoose-error/>
+          <p class="help-block" ng-show="form.city.$error.mongoose">
+              {{ vm.errors.city }}
+          </p>
+        </div>
+        <div class="form-group">
+          <label>State</label>
+
+          <input type="text" name="state" class="form-control" ng-model="vm.user.state"
+                 mongoose-error/>
+          <p class="help-block" ng-show="form.state.$error.mongoose">
+              {{ vm.errors.state }}
+          </p>
+        </div>
+
+        <p class="help-block"> {{ vm.profileFormMessage }} </p>
+
+        <button class="btn btn-lg btn-primary" type="submit">Save Profile</button>
+      </form>
+    </div>
+  </div>
+  
+  
 </div>
