--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,9 +2,9 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <h1>Book Trading App</h1>
+    <p class="lead">Trade your books!</p>
+    <img src="assets/images/book-logo.png" alt="Books">
   </div>
 </header>
 
